dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-express-app-service
spec:
  selector:
    app: my-node-express-app
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
