dev/servicev1.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-express-app-service-v1
spec:
  selector:
    app: my-node-express-app-v1
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
